--- a/Project_3/Project-3-Copy3.ipynb
+++ b/Project_3/Project-3-Copy3.ipynb
@@ -960,7 +960,9 @@
    "metadata": {},
    "source": [
     "## Splitting the data into test and train data sets\n",
-    "We will split the data into 20:80 ratio for test:train data. We will first identify the cells in the utility matrix where a movie has been rated by at least 2 users, and randomly pick 20% of such cells as test data. If we just consider any movie randomly, then there is a chance to get movies, which are rated by single user only into the test data. The movie ratings picked for test data, will be filled with NAs in training data. So there is a chance that a movie rating will have all NA values, if the movie is rated by a single user, and if that rating is moved to the test data. So unless a movie has atleast 2 ratings, we will not consider that movie to test our algorithm's performance."
+    "We will split the data into 20:80 ratio for test:train data. We will first identify the cells in the utility matrix where a movie has been rated by at least 2 users, and randomly pick 20% of such cells as test data. \n",
+    "\n",
+    "This way we can eliminate the chance of picking any movie rated by single user into the test data. So unless a movie has atleast 2 ratings, we will not consider that movie to test our algorithm's performance."
    ]
   },
   {
@@ -1805,7 +1807,7 @@
     "\n",
     "*list_mean(l):* Gets the mean of input numpy array, without considering the NA values\n",
     "\n",
-    "*get_U_V(Utility,factors,reg, episodes, test_df,seed):* Main function that takes the Utility data frame, required number of factors, regularization parm, number of times to train all the elements of U and V matrices, the test data frame, and the seed for reproduciable results. The function outputs 6 values: _U, V, training errors, test errors, item means and user means_\n",
+    "*get_U_V(Utility,factors,reg, episodes, test_df,seed):* Main function that takes the Utility data frame, required number of factors, regularization parm, number of times to train all the elements of U and V matrices, the test data frame, and the seed for reproducible results. The function outputs 6 values: _U, V, training errors, test errors, item means and user means_\n",
     "\n",
     "*get_ratings(Utility,row_idx,col_idx,indices=True):* Gets the rating at the specific row and column locations in the Utility data frame. The row_idx and col_idx can be index and column names or they can be row number and column number. If they represent the index and column, then the indices parameter must be set to True, else it must be set to False."
    ]
@@ -2673,7 +2675,7 @@
    "metadata": {},
    "source": [
     "### Getting recommendations\n",
-    "We will now get the recommendations for some of the users, based on the movies they rated. We assume that a user has liked the movie, if he has rated that movie with more than 4 stars. For our convinience, we will define a function that accepts the user ID, along with the number of desired recommended movies, the Utility matrix, the transposed V matrix (converted to a data frame, with rows corresponding to the movies, and columns corresponding to the factors), and all movie genres data frame. "
+    "We will now get the recommendations for some of the users, based on the movies they rated. We assume that a user has liked the movie, if he has rated that movie with more than 4 stars. For our convnience, we will define a function that accepts the user ID, along with the number of desired recommended movies, the Utility matrix, the transposed V matrix (converted to a data frame, with rows corresponding to the movies, and columns corresponding to the factors), and all movie genres data frame. "
    ]
   },
   {
