--- a/Project_3/Project-3-Copy3.ipynb
+++ b/Project_3/Project-3-Copy3.ipynb
@@ -2675,7 +2675,7 @@
    "metadata": {},
    "source": [
     "### Getting recommendations\n",
-    "We will now get the recommendations for some of the users, based on the movies they rated. We assume that a user has liked the movie, if he has rated that movie with more than 4 stars. For our convnience, we will define a function that accepts the user ID, along with the number of desired recommended movies, the Utility matrix, the transposed V matrix (converted to a data frame, with rows corresponding to the movies, and columns corresponding to the factors), and all movie genres data frame. "
+    "We will now get the recommendations for some of the users, based on the movies they rated. We assume that a user has liked the movie, if he has rated that movie with more than 4 stars. For our convenience, we will define a function that accepts the user ID, along with the number of desired recommended movies, the Utility matrix, the transposed V matrix (converted to a data frame, with rows corresponding to the movies, and columns corresponding to the factors), and all movie genres data frame. "
    ]
   },
   {
